# ualand-updater

./: .eslintrc.js  .gitignore  .gitmodules  .pnp.cjs  LICENSE  README.md  package.json
.github/workflows/: tauri.yml
.tauri/: bultek.key  bultek.key.pub
src/: App.tsx  getCurrentVersion.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
~/.tauri/: bltk.key  bltk.key.pub
